# ct16-bst-remove

./: .gitignore  CMakeLists.txt  README.md  assignment.json  canvas-page.html
images/: cpp_diagrams.md  header_diagrams.md
include/: BinarySearchTree.h
src/: BinarySearchTree.cpp  main.cpp
tests/: ct16_test.cpp
